Cleaned up a test with not null and primary key (still not working for all tests).